--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
@@ -27,6 +27,7 @@ package ${packElem};
         fun reflexiveMutator(mutatorType : Int, refName : String, value : Any?)
 
         fun containedElementsList() : List<Any>
+        fun referencedElementsList() : List<Any>
 
 #end
 
