--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -12,18 +12,33 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
     internal open var internal_unsetCmd : RemoveFromContainerCommand?
 
     override fun eContainer() : org.kevoree.modeling.api.${formatedFactoryName}? { return internal_eContainer }
-
     internal open var internal_containmentRefName : String?
-
     internal open var internal_readOnlyElem : Boolean
-
     internal open var internal_recursive_readOnlyElem : Boolean
 
-    override open fun setRecursiveReadOnly()
+
+    override fun setRecursiveReadOnly(){
+        if(internal_recursive_readOnlyElem == true){return}
+        setInternalRecursiveReadOnly()
+        val recVisitor = object : org.kevoree.modeling.api.util.ModelVisitor(){
+            override fun visit(elem : org.kevoree.modeling.api.KMFContainer, refNameInParent : String, parent : org.kevoree.modeling.api.KMFContainer){
+               // if(elem.isRecursiveReadOnly()){stopVisit()}
+                (elem as ${formatedFactoryName}Impl).setInternalRecursiveReadOnly()
+                elem.setInternalReadOnly()
+            }
+        }
+        visit(recVisitor,true,false)
+        setInternalReadOnly()
+    }
+
     override open fun reflexiveMutator(mutatorType : Int,refName : String, value : Any?)
 
     override fun setInternalReadOnly(){
         internal_readOnlyElem = true
+    }
+
+    fun setInternalRecursiveReadOnly(){
+        internal_recursive_readOnlyElem = true
     }
 
     override fun getRefInParent() : String? {
@@ -37,6 +52,8 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
     override fun isRecursiveReadOnly() : Boolean {
         return internal_recursive_readOnlyElem
     }
+
+    fun internalGetKey() : String?
 
     fun setEContainer( container : org.kevoree.modeling.api.${formatedFactoryName}?, unsetCmd : RemoveFromContainerCommand?, refNameInParent : String? ) {
 
@@ -60,7 +77,6 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
     override fun selectByQuery(query : String) : List<Any> {
         throw Exception("Not activated, please add selector option in KMF generation plugin")
     }
-
 #end
 
 
@@ -168,4 +184,7 @@ fun resolve(addrs : java.util.IdentityHashMap<Any,Any>,readOnly:Boolean, mutable
         throw Exception("Not activated, please add events option in KMF generation plugin")
     }
 #end
+
+    override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursive : Boolean, onlyContainedRef : Boolean){}
+
 }
