--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/KMFQLSelectorByQuery.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/KMFQLSelectorByQuery.vm
@@ -50,7 +50,7 @@ override fun selectByQuery(query : String) : MutableList<Any> {
             #foreach( $ref in $eRefs )
                 ${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Ref_${ref.getName()} -> {
                 #if(!$ref.isMany())
-                    var subResult = ${ctx.getkevoreeCacheResolver()}.filter(queryID,java.util.Collections.singleton(get${ref.getName().substring(0, 1).toUpperCase()}${ref.getName().substring(1)}())!!)
+                    var subResult = ${ctx.getkevoreeCacheResolver()}.filter(queryID,java.util.Collections.singleton(${FQNHelper.protectReservedWords($ref.getName())})!!)
                     collected.add(subResult)
                 #else
                     var subResult : MutableCollection<Any>? = null
@@ -85,11 +85,11 @@ override fun selectByQuery(query : String) : MutableList<Any> {
                     var subResult : MutableCollection<Any> = java.util.ArrayList<Any>()
                     #foreach( $subRef in $eSub )
                         #if(!$subRef.isMany())
-                            if(get${subRef.getName().substring(0, 1).toUpperCase()}${subRef.getName().substring(1)}()!=null){
-                                subResult.addAll(${ctx.getkevoreeCacheResolver()}.filter(queryID,java.util.Collections.singleton(get${subRef.getName().substring(0, 1).toUpperCase()}${subRef.getName().substring(1)}())!!)!!)
+                            if(${FQNHelper.protectReservedWords($subRef.getName())}!=null){
+                                subResult.addAll(${ctx.getkevoreeCacheResolver()}.filter(queryID,java.util.Collections.singleton(${FQNHelper.protectReservedWords($subRef.getName())})!!)!!)
                             }
                         #else
-                            subResult.addAll(${ctx.getkevoreeCacheResolver()}.filter(queryID,get${subRef.getName().substring(0, 1).toUpperCase()}${subRef.getName().substring(1)}())!!)
+                            subResult.addAll(${ctx.getkevoreeCacheResolver()}.filter(queryID,${FQNHelper.protectReservedWords($subRef.getName())})!!)
                         #end
 
                     #end
