--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/JSONLoader.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/JSONLoader.vm
@@ -112,21 +112,21 @@ val mainFactory = ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration()
             val nextName = reader.nextName()
             when(nextName) {
             #foreach($att in $elemToLoad.getEAllAttributes())
-                #set($methName = "set" + $att.getName().substring(0, 1).toUpperCase() + $att.getName().substring(1))
+                #set($methName = ${helper.protectReservedWords($att.getName())})
                 #if($helper.convertType($att.getEAttributeType(),$ctx).equals("Int"))
-                "$att.getName()" -> {modelElem.$methName(reader.nextInt())}
+                "$att.getName()" -> {modelElem.$methName = (reader.nextInt())}
                 #elseif($helper.convertType($att.getEAttributeType(),$ctx).equals("Boolean"))
-                "$att.getName()" -> {modelElem.$methName(reader.nextBoolean())}
+                "$att.getName()" -> {modelElem.$methName = (reader.nextBoolean())}
                 #elseif($helper.convertType($att.getEAttributeType(),$ctx).equals("Double"))
-                "$att.getName()" -> {modelElem.$methName(reader.nextDouble())}
+                "$att.getName()" -> {modelElem.$methName = (reader.nextDouble())}
                 #elseif($helper.convertType($att.getEAttributeType(),$ctx).equals("Long"))
-                "$att.getName()" -> {modelElem.$methName(reader.nextLong())}
+                "$att.getName()" -> {modelElem.$methName = (reader.nextLong())}
                 #elseif($helper.convertType($att.getEAttributeType(),$ctx).endsWith("BigInteger"))
-                "$att.getName()" -> {modelElem.$methName(java.math.BigInteger(reader.nextString()))}
+                "$att.getName()" -> {modelElem.$methName = (java.math.BigInteger(reader.nextString()))}
                 #elseif($att.getEAttributeType().getClass().getName().toLowerCase().contains("eenum"))
-                "$att.getName()" -> {modelElem.$methName(${helper.fqn($ctx,$att.getEAttributeType())}.valueOf(reader.nextString()!!))}
+                "$att.getName()" -> {modelElem.$methName = (${helper.fqn($ctx,$att.getEAttributeType())}.valueOf(reader.nextString()!!))}
                 #else
-                "$att.getName()" -> {modelElem.$methName(unescapeJSON(reader.nextString()!!))}
+                "$att.getName()" -> {modelElem.$methName = (unescapeJSON(reader.nextString()!!))}
                 #end
             #end
             #foreach($ref in $elemToLoad.getEAllReferences())
@@ -170,7 +170,11 @@ val mainFactory = ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration()
                                 #else
                                     val loadedElem = load$ref.getEReferenceType().getName()(reader, context)
                                 #end
-                                modelElem.#if($ref.isMany())add#{else}set#{end}$ref.getName().substring(0,1).toUpperCase()$ref.getName().substring(1)(loadedElem)
+                                #if($ref.isMany())
+                                    modelElem.add$ref.getName().substring(0,1).toUpperCase()$ref.getName().substring(1)(loadedElem)
+                                #{else}
+                                    modelElem.${ref.getName()} = loadedElem
+                                #{end}
                             #end
                         reader.endObject()
                     #if($ref.isMany())
