--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/TraceCompareMethod.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/TraceCompareMethod.vm
@@ -4,7 +4,7 @@
 
 #set($tracePack=${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())})
 
-override fun generateDiffTraces(similarObj : ${ctx.getKevoreeContainer().get()}?, inter : Boolean, ref : Boolean) : List<org.kevoree.modeling.api.trace.ModelTrace> {
+override fun generateDiffTraces(similarObj : ${ctx.getKevoreeContainer().get()}?, kmf_internal_inter : Boolean, kmf_internal_ref : Boolean) : List<org.kevoree.modeling.api.trace.ModelTrace> {
 
     var similarObjCasted : ${FQNHelper.fqn($ctx, $currentClass)}? = null
     #if($ctx.getJS())
@@ -20,43 +20,43 @@ override fun generateDiffTraces(similarObj : ${ctx.getKevoreeContainer().get()}?
     var attVal2String : String? = null;
     var hashLoop : java.util.HashMap<String,org.kevoree.modeling.api.KMFContainer>? = null;
     var hashResult : java.util.HashMap<String,org.kevoree.modeling.api.KMFContainer>? = null;
-    if(!ref){
+    if(!kmf_internal_ref){
      #foreach( $att in $currentClass.eAllAttributes )
-          attVal = get${att.getName().substring(0, 1).toUpperCase()}${att.getName().substring(1)}()
-          attVal2 = similarObjCasted?.get${att.getName().substring(0, 1).toUpperCase()}${att.getName().substring(1)}()
+          attVal = ${FQNHelper.protectReservedWords(${att.getName()})}
+          attVal2 = similarObjCasted?.${FQNHelper.protectReservedWords(${att.getName()})}
           if(attVal != attVal2){
-                 if(!inter){
+                 if(!kmf_internal_inter){
                     traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Att_$att.getName(),null,attVal2?.toString(),null))
                  }
           } else {
                 //att similar
-                if(inter){
+                if(kmf_internal_inter){
                     traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Att_$att.getName(),null,attVal2?.toString(),null))
                 }
           }
      #end
      } else {
-     #foreach( $ref in $currentClass.eAllReferences )
-         #if(!$ref.isContainment());
-              #if($ref.isMany())
+     #foreach( $kmf_internal_ref in $currentClass.eAllReferences )
+         #if(!$kmf_internal_ref.isContainment());
+              #if($kmf_internal_ref.isMany())
                   hashLoop = java.util.HashMap<String,org.kevoree.modeling.api.KMFContainer>()
                   hashResult = java.util.HashMap<String,org.kevoree.modeling.api.KMFContainer>()
-                  for(elem in get${ref.getName().substring(0, 1).toUpperCase()}${ref.getName().substring(1)}()){
+                  for(elem in _${kmf_internal_ref.getName()}.values()){
                       val elemPath = elem.path()
                       if(elemPath != null){
                         hashLoop!!.put(elemPath,elem)
                       }
                   }
                   if(similarObjCasted != null){
-                    for(elem in similarObjCasted!!.get${ref.getName().substring(0, 1).toUpperCase()}${ref.getName().substring(1)}()){
+                    for(elem in similarObjCasted!!.${FQNHelper.protectReservedWords(${kmf_internal_ref.getName()})}){
                         val elemPath = elem.path()
                         if(elemPath != null){
                         if(hashLoop!!.containsKey(elemPath)){
-                          if(inter){
+                          if(kmf_internal_inter){
                              hashResult!!.put(elemPath,elem)
                           }
                        } else {
-                          if(!inter){
+                          if(!kmf_internal_inter){
                             hashResult!!.put(elemPath,elem)
                           }
                        }
@@ -65,27 +65,27 @@ override fun generateDiffTraces(similarObj : ${ctx.getKevoreeContainer().get()}?
                   }
                   if(hashResult!!.size != 0){
                     for(hashLoopRes in hashResult!!.keySet()){
-                        traces.add(org.kevoree.modeling.api.trace.ModelAddTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Ref_$ref.getName(),hashLoopRes,hashResult!!.get(hashLoopRes)!!.metaClassName()))
+                        traces.add(org.kevoree.modeling.api.trace.ModelAddTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Ref_$kmf_internal_ref.getName(),hashLoopRes,hashResult!!.get(hashLoopRes)!!.metaClassName()))
                     }
                   }
               #else
                   attVal = null;
-                  attVal = get${ref.getName().substring(0, 1).toUpperCase()}${ref.getName().substring(1)}()?.path();
+                  attVal = ${FQNHelper.protectReservedWords(${kmf_internal_ref.getName()})}?.path();
                   attVal2 = null;
-                  attVal2 = similarObjCasted?.get${ref.getName().substring(0, 1).toUpperCase()}${ref.getName().substring(1)}()?.path()
+                  attVal2 = similarObjCasted?.${FQNHelper.protectReservedWords(${kmf_internal_ref.getName()})}?.path()
                   if(attVal2 != null){
                     attVal2String = attVal2.toString()
                   } else {
                     attVal2String = null
                   }
                   if(attVal != attVal2){
-                         if(!inter){
-                            traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Ref_$ref.getName(),attVal2String,null,null))
+                         if(!kmf_internal_inter){
+                            traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Ref_$kmf_internal_ref.getName(),attVal2String,null,null))
                          }
                   } else {
                         //att similar
-                        if(inter){
-                            traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Ref_$ref.getName(),attVal2String,null,null))
+                        if(kmf_internal_inter){
+                            traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Ref_$kmf_internal_ref.getName(),attVal2String,null,null))
                         }
                   }
               #end
