--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -31,7 +31,7 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
         setInternalReadOnly()
     }
 
-    override open fun reflexiveMutator(mutatorType : Int,refName : String, value : Any?)
+    override open fun reflexiveMutator(mutatorType : Int,refName : String, value : Any?, noOpposite : Boolean)
 
     override fun setInternalReadOnly(){
         internal_readOnlyElem = true
