--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -16,7 +16,6 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
     internal open var internal_readOnlyElem : Boolean
     internal open var internal_recursive_readOnlyElem : Boolean
 
-
     override fun setRecursiveReadOnly(){
         if(internal_recursive_readOnlyElem == true){return}
         setInternalRecursiveReadOnly()
@@ -80,11 +79,10 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
 #end
 
 
+    fun createClone(_factories:${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.factory.MainFactory) : org.kevoree.modeling.api.KMFContainer
 #if(${ctx.jS})
-fun getClonelazy(subResult : java.util.HashMap<Any,Any>, _factories : ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.factory.MainFactory, mutableOnly: Boolean)
 fun resolve(addrs : java.util.HashMap<Any,Any>,readOnly:Boolean, mutableOnly: Boolean) : Any
 #else
-fun getClonelazy(subResult : java.util.IdentityHashMap<Any,Any>, _factories : ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.factory.MainFactory, mutableOnly: Boolean)
 fun resolve(addrs : java.util.IdentityHashMap<Any,Any>,readOnly:Boolean, mutableOnly: Boolean) : Any
 #end
 
@@ -186,5 +184,18 @@ fun resolve(addrs : java.util.IdentityHashMap<Any,Any>,readOnly:Boolean, mutable
 #end
 
     override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursive : Boolean, onlyContainedRef : Boolean){}
+
+    fun internal_visit(visitor : org.kevoree.modeling.api.util.ModelVisitor,internalElem : org.kevoree.modeling.api.KMFContainer?,recursive:Boolean,onlyContainedRef:Boolean, refName : String){
+        if(internalElem != null){
+            visitor.visit(internalElem,refName,this)
+            if(visitor.visitStopped){
+                return
+            } else {
+                if(recursive){
+                    internalElem.visit(visitor,recursive,onlyContainedRef)
+                }
+            }
+        }
+    }
 
 }
