--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ModelCloner.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ModelCloner.vm
@@ -35,7 +35,15 @@ override fun cloneMutableOnly<A : org.kevoree.modeling.api.KMFContainer>(o : A,r
             }
         }
         o.visit(cloneGraphVisitor,true,true)
-        return (o as ${ctx.getKevoreeContainerImplFQN()}).resolve(context,readOnly,mutableOnly) as A
+
+        val resolveGraphVisitor = object : org.kevoree.modeling.api.util.ModelVisitor(){
+            override public fun visit(elem : org.kevoree.modeling.api.KMFContainer, refNameInParent : String, parent : org.kevoree.modeling.api.KMFContainer){
+                (elem as ${ctx.getKevoreeContainerImplFQN()}).resolve(context,readOnly,mutableOnly)
+                if(readOnly){clonedSelfObject.setInternalReadOnly()}
+            }
+        }
+        o.visit(resolveGraphVisitor,true,true)
+        return context.get(o) as A
     }
      var mainFactory : ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.factory.MainFactory = ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.factory.MainFactory()
      #foreach($factoryFqn in $packages)
