--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -21,9 +21,12 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
         setInternalRecursiveReadOnly()
         val recVisitor = object : org.kevoree.modeling.api.util.ModelVisitor(){
             override fun visit(elem : org.kevoree.modeling.api.KMFContainer, refNameInParent : String, parent : org.kevoree.modeling.api.KMFContainer){
-               // if(elem.isRecursiveReadOnly()){stopVisit()}
-                (elem as ${formatedFactoryName}Impl).setInternalRecursiveReadOnly()
-                elem.setInternalReadOnly()
+                if(elem.isRecursiveReadOnly()){
+                    noChildrenVisit()
+                }else {
+                    (elem as ${formatedFactoryName}Impl).setInternalRecursiveReadOnly()
+                    elem.setInternalReadOnly()
+                }
             }
         }
         visit(recVisitor,true,false)
@@ -186,12 +189,11 @@ fun resolve(addrs : java.util.IdentityHashMap<Any,Any>,readOnly:Boolean, mutable
     fun internal_visit(visitor : org.kevoree.modeling.api.util.ModelVisitor,internalElem : org.kevoree.modeling.api.KMFContainer?,recursive:Boolean,onlyContainedRef:Boolean, refName : String){
         if(internalElem != null){
             visitor.visit(internalElem,refName,this)
-            if(visitor.visitStopped){
-                return
-            } else {
-                if(recursive){
+            if(!visitor.visitStopped){
+                if(recursive && visitor.visitChildren){
                     internalElem.visit(visitor,recursive,onlyContainedRef)
                 }
+                visitor.visitChildren = true
             }
         }
     }
