--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ModelCloner.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ModelCloner.vm
@@ -27,11 +27,15 @@ override fun cloneMutableOnly<A : org.kevoree.modeling.api.KMFContainer>(o : A,r
         #else
             val context = java.util.IdentityHashMap<Any,Any>()
         #end
-
+        val clonedObject = (o as ${ctx.getKevoreeContainerImplFQN()}).createClone(mainFactory)
+        context.put(o,clonedObject)
         val cloneGraphVisitor = object : org.kevoree.modeling.api.util.ModelVisitor(){
             override public fun visit(elem : org.kevoree.modeling.api.KMFContainer, refNameInParent : String, parent : org.kevoree.modeling.api.KMFContainer){
-                if(mutableOnly && elem.isRecursiveReadOnly()){stopVisit();return}
-                context.put(elem,(elem as ${ctx.getKevoreeContainerImplFQN()}).createClone(mainFactory))
+                if(mutableOnly && elem.isRecursiveReadOnly()){
+                    noChildrenVisit();
+                } else {
+                    context.put(elem,(elem as ${ctx.getKevoreeContainerImplFQN()}).createClone(mainFactory))
+                }
             }
         }
         o.visit(cloneGraphVisitor,true,true)
@@ -39,11 +43,13 @@ override fun cloneMutableOnly<A : org.kevoree.modeling.api.KMFContainer>(o : A,r
         val resolveGraphVisitor = object : org.kevoree.modeling.api.util.ModelVisitor(){
             override public fun visit(elem : org.kevoree.modeling.api.KMFContainer, refNameInParent : String, parent : org.kevoree.modeling.api.KMFContainer){
                 (elem as ${ctx.getKevoreeContainerImplFQN()}).resolve(context,readOnly,mutableOnly)
-                if(readOnly){clonedSelfObject.setInternalReadOnly()}
+                if(readOnly){(elem as ${ctx.getKevoreeContainerImplFQN()}).setInternalReadOnly()}
             }
         }
         o.visit(resolveGraphVisitor,true,true)
-        return context.get(o) as A
+        (o as ${ctx.getKevoreeContainerImplFQN()}).resolve(context,readOnly,mutableOnly)
+        if(readOnly){(clonedObject as ${ctx.getKevoreeContainerImplFQN()}).setInternalReadOnly()}
+        return clonedObject as A
     }
      var mainFactory : ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.factory.MainFactory = ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.factory.MainFactory()
      #foreach($factoryFqn in $packages)
