--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/util/ConstGenerator.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/util/ConstGenerator.vm
@@ -7,6 +7,8 @@ object Constants {
     public val UNKNOWN_MUTATION_TYPE_EXCEPTION : String = "Unknown mutation type: "
     public val READ_ONLY_EXCEPTION : String = "This model is ReadOnly. Elements are not modifiable."
     public val LIST_PARAMETER_OF_SET_IS_NULL_EXCEPTION : String = "The list in parameter of the setter cannot be null. Use removeAll to empty a collection."
+    public val ELEMENT_HAS_NO_KEY_IN_COLLECTION : String = "Cannot set the collection, because at least one element of it has no key!"
+    public val EMPTY_KEY : String = "Key empty : please set the attribute key before adding the object."
 
     public val LOADER_XMI_LOCAL_NAME : String = "type"
     public val LOADER_XMI_XSI : String = "xsi"
